<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:padding="8dp"

        android:text="@string/bt_banks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/tv_name"

        app:layout_constraintStart_toStartOf="@+id/tvShopName"
        app:layout_constraintTop_toBottomOf="@+id/tvShopName" />

    <TextView
        android:id="@+id/tvUserNameValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:padding="8dp"

        app:layout_constraintEnd_toEndOf="@+id/tvShopName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPossessionMoney"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:gravity="center_vertical"

        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvUserNameValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="#ffffff"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/tv_possession_money"

        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvWithdrawMoney"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"

        android:background="#ffffff"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/tv_back"

        app:layout_constraintStart_toStartOf="@+id/tv"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="113dp" />

    <EditText
        android:id="@+id/edWithdrawMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="number"

        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPossessionMoney"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tvWithdrawMoney" />

    <Button
        android:id="@+id/btWithdrawMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/bt_confirmation"
        app:layout_constraintEnd_toEndOf="@+id/edWithdrawMoney"
        app:layout_constraintStart_toStartOf="@+id/tvWithdrawMoney"
        app:layout_constraintTop_toBottomOf="@+id/edWithdrawMoney" />


</androidx.constraintlayout.widget.ConstraintLayout>